Lagt in phonegap?

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <body>
+<head>
+<script src="phonegap.js"></script>
+</head>
 <div id="camera">
     <button class="camera-control" onclick="capturePhoto();">Capture Photo</button>
  
